# unattend-my-iso

./: .gitignore  MANIFEST.in  Makefile  README.md  changelog.md  generate-win11-iso.bash  notes.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_vm.bash  setup.cfg  setup.py
notes/: notes.md
scripts/: create_ci_disk.bash  create_vlandev.bash  dnsmasq.conf  run_dhcp_server.bash
src/unattend_my_iso/: debug.py  main.py
src/unattend_my_iso/addons/: addon_base.py  answerfile.py  cloudinit.py  cmd.py  grub.py  live.py  postinstall.py  ssh.py  user.py
src/unattend_my_iso/common/: arg_base.py  args.py  common.py  config.py  config_reader.py  const.py  logging.py  model.py  templates.py  tomlreader.py
src/unattend_my_iso/helpers/: config.py  downloads.py  files.py  geniso.py  irmod.py  kvm.py  logging.py  mount.py  sys.py
src/unattend_my_iso/process/: processor.py  processor_base.py
templates/addons/answerfile/: autounattend.xml  preseed.cfg  preseed_dhcp.cfg  preseed_fixip.cfg  preseed_off_lvm.cfg  preseed_off_lvmluks.cfg  preseed_off_no_enc.cfg  preseed_offline.cfg  preseed_offline_no_enc.cfg  preseed_on_lvm_dhcp.cfg  preseed_on_lvmluks_dhcp.cfg  preseed_on_lvmluks_staticip.cfg  preseed_output.txt
templates/addons/grub/: grub.cfg
templates/addons/live/: 99_motd_frauas.bash
templates/addons/postinstall/: .bash_aliases  .bashrc  postinstall.bash  postinstall.bat  postinstall_apt.bash  postinstall_hostnetwork.bash  postinstall_locale.bash  (+2 more)
templates/debian12/: desc.toml  preseed.cfg
templates/win11/: autounattend.xml  desc.toml  preseed.cfg
(+234 files in other folders)
