[metadata]
name = unattend_my_iso
version = 0.0.1
author = jb
author_email = foo@bar.baz
description = Short description
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8

[options.packages.find]
where = src
